@@ -60,6 +60,7 @@ ROOT = $(SOME_DEST)/$(EXTRANAME)root.img$(GZIPPED)
 EXTRA = $(SOME_DEST)/$(EXTRANAME).img$(GZIPPED)
 MINIISO = $(SOME_DEST)/$(EXTRANAME)mini.iso
 DEBIAN_CD_INFO = $(SOME_DEST)/$(EXTRANAME)debian-cd_info.tar.gz
+PXE_BOOT = $(SOME_DEST)/$(EXTRANAME)pxeboot.tar.gz
 MISC = $(foreach name,$(MISCNAME),$(SOME_DEST)/$(EXTRANAME)$(name))
 
 # some intersting files in tmp/ we may need
@@ -71,6 +72,7 @@ TEMP_ROOT = $(TEMP)/root.img
 TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
 TEMP_BOOT_SCREENS = $(TEMP)/boot_screens
+TEMP_PXE_BOOT = $(TEMP)/pxe_boot
 TEMP_CD_TREE = $(TEMP)/cd_tree
 TEMP_POWERPC_INITRD = $(TEMP)/powerpc_initrd_tree
 
