@@ -142,13 +142,14 @@ with booting from it.
 
 It's also possible to boot debian-installer completely from the net. The 
 various methods to netboot depend on your architecture and netboot setup. 
-They are not explaind here. For an explanation of how to do PXE netbooting
-(on i386), see this web page:
-http://wiki.debian.net/index.cgi?DebianInstallerNetbootPXE
-
 The files in netboot/ can be used to netboot debian-installer.
-If you don't have a netboot setup, you can write the netboot/mini.iso
-to a CD to produce a minimal netinst CD.
+
+On i386, the easiest thing to set up is probably PXE netbooting. Untar the
+file netboot/pxeboot.tar.gz into /var/lib/tftpboot or wherever is
+appropriate for your tftp server. Set up your DHCP server to pass filename
+"/pxelinux.0" to clients, and it with luck everything will just work. For
+more details, see this web page:
+http://wiki.debian.net/index.cgi?DebianInstallerNetbootPXE
 
 2.5 Booting from hard disk
 
